--- a/style.css
+++ b/style.css
@@ -59,12 +59,17 @@
         background-color: #F0F7C3;
         border-radius: 10px;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        pointer-events: none;
+        pointer-events: visible;
       }
 
     #tooltip.hidden {
             display: none;
     }
+
+ .node--hover circle {
+  stroke: green;
+  stroke-width: 1.2px;
+}
 
 
 .node {
@@ -76,6 +81,11 @@
   stroke-width: 1.5px;
 }
 
+/*.node--leaf:hover {
+  stroke: #000;
+  stroke-width: 1.5px;
+}*/
+
 .node--leaf {
   fill: white;
 }
@@ -84,11 +94,11 @@
   font: 18px "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-anchor: middle;
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
-    transform: rotate(90);
+/*    transform: rotate(90);*/
 }
 
 .label,
 .node--root,
 .node--leaf {
-  pointer-events: none;
+  pointer-events: visible;
 }
